--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,6 +1,6 @@
 <% if book.errors.any? %>
     <div>
-      <h2><%= book.errors.count %> prohibited this book from being saved:</h2>
+      <h2><%= book.errors.count %> errors prohibited this book from being saved:</h2>
 
       <ul>
       <% book.errors.full_messages.each do |message| %>
